# auction-analysis

./: .gitignore  METHODOLOGY.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README_STRATEGIC_ANALYSIS.md  check_overlap.py  check_owen.py  compare_models.py  debug_metadata.py  debug_page.html  debug_page_headed.html  export_unknowns.py  fix_owen.py  inspect_columns.py  inspect_ipl_data.py  pyproject.toml  resume_pipeline.sh  run_pipeline.sh  skip_uncertainty_pipeline.sh  verify_spinners.py
FantasyProjections/: 01_extract_with_fielders.py  02_calculate_fantasy_points.py  02b_extract_t20i_fantasy.py  02c_calculate_t20i_fantasy_points.py  03_feature_engineering.py  03b_t20i_features.py  04_train_model.py  05_train_production.py  06_score_auction.py  07_score_squads.py  08_visualize_squads.py  09_fantasy_auction_values.py  10_ipl2026_custom_fantasy.py  11_reconcile_boston.py  12_player_rankings_html.py  13a_score_historical_custom.py  13b_marcel_projection.py  13c_build_training_table.py  13d_train_xgboost.py  13e_project_2026.py  13f_consolidate_and_visualize.py  13g_deshdrohi_projections.py  README.md  README_AUCTION.md
WARprojections/: 01_extract_full_history.py  02_calculate_metrics.py  03_feature_engineering.py  03b_phase_features.py  03c_situational_features.py  04_train_model.py  04_train_model_v3.py  04_train_model_v4.py  04_train_model_v5.py  04_train_model_v6.py  04_train_model_v6_production.py  05_extract_global.py  06_league_strength.py  07_global_features.py  08_train_global_model.py  09_marcel_baseline.py  10_comprehensive_analysis.py  (+18 more)
(+98 files in other folders)
