[project]
name = "cricwar"
version = "0.1.0"
description = "Wins Above Replacement for Cricket - Full reproduction of cricWAR paper"
authors = [
    {name = "Aryaman Gupta"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core data science
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    # Statistical modeling
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    # R integration
    "rpy2>=3.5.0",
    # Data storage
    "pyarrow>=12.0.0",
    "fastparquet>=2023.4.0",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    # Progress bars
    "tqdm>=4.65.0",
    # Jupyter
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.23.0",
    # Utilities
    "python-dateutil>=2.8.2",
    "playwright>=1.56.0",
    "curl-cffi>=0.13.0",
    "dotenv>=0.9.9",
    "ddgs>=9.9.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
